# fakturoid-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.plan/: plan.md  tasks.md
src/fakturoid_mcp/: __init__.py  __main__.py  config.py  server.py
src/fakturoid_mcp/tools/: __init__.py  _helpers.py  account.py  expenses.py  generators.py  invoices.py  subjects.py
